# marzipan

./: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  GradientPalette.cpp  GradientPalette.h  Mandelbrot.cpp  Mandelbrot.h  Palette.h  README.md  RasterWidget.cpp  RasterWidget.h  RasterWindow.cpp  RasterWindow.h  canvas_test.cpp  main.cpp  mandelbrot_test.cpp  marzipan.html  marzipangui.cpp
fractales/: ContinuousMandelbrot.cpp  ContinuousMandelbrot.h  Fractal.cpp  Fractal.h  Julia.cpp  Julia.h  Mandelbrot.cpp  Mandelbrot.h  MandelbrotExperiments.cpp  MandelbrotExperiments.h  MartinMandelbrot.cpp  MartinMandelbrot.h  MpComplex.cpp  MpComplex.h  OrbitMandelbrot.cpp  OrbitMandelbrot.h  fractal.cpp  fractal.h  fractale.cpp  fractale.h  julia.cpp  julia.h  mandelbrot.cpp  mandelbrot.h  mandelbrot_quadtree.cpp  mandelbrot_quadtree.h
fractales/orbits/: BitmapOrbit.cpp  BitmapOrbit.h  LineOrbit.cpp  LineOrbit.h  Orbit.h  PointOrbit.cpp  PointOrbit.h
fractales/orbits/util/: BitmapMapComputer.cpp  BitmapMapComputer.h
graphics/: Canvas.h  Color.h  ColoredPoint.cpp  ColoredPoint.h  ImageCanvas.cpp  ImageCanvas.h  LinearRenderer.cpp  LinearRenderer.h  LinearRendererThreading.cpp  LinearRendererThreading.h  QPainterCanvas.cpp  QPainterCanvas.h  QuadtreeRenderer.cpp  QuadtreeRenderer.h  Renderer.h  canvas.cpp  canvas.h  color.cpp  color.h  image_canvas.cpp  image_canvas.h  qpainter_canvas.cpp  qpainter_canvas.h
graphics/palette/: ContinuousFixedPalette.cpp  ContinuousFixedPalette.h  ContinuousPalette.cpp  ContinuousPalette.h  GradientPalette.cpp  GradientPalette.h  HistoPalette.cpp  HistoPalette.h  Palette.h  RandomPalette.cpp  RandomPalette.h  RepeatingGradientPalette.cpp  RepeatingGradientPalette.h  gradient_palette.cpp  gradient_palette.h  histo_palette.cpp  histo_palette.h  palette.h  random_palette.cpp  random_palette.h  repeating_gradient_palette.cpp  repeating_gradient_palette.h
js/: marzipan.html
protobuf/: marzipanstate.pb.cc  marzipanstate.pb.h  marzipanstate.proto
tests/: canvas_test.cpp  gradient_palette_test.cpp  mandelbrot_test.cpp
